# FundRunner

./: .deepsource.toml  .env.example  .flake8  .gitignore  ACTIVITY_5_30.md  AGENTS.md  ActionItems_5-20.md  BACKGROUND_MODE.md  CHANGELOG.md  CODEX_CHECKLIST_V1.0.md  CODEX_REPORT.md  Notes  README.md  ROADMAP.md  TASKLOG-JSON.md  ToDo.md  WARP.md  api_client.py  backtester.py  chatgpt_advisor.py  chatgpt_trading_controller.py  cli.py  config.py  daemon_cli.py  dashboard.py  dev-requirements.txt  filetree.md  finalize.py  gpt_api.py  gpt_client.py  live_options_api.py  llm_integration.py  logger_config.py  main.py  menu.py  newmain.py  options_integration.py  options_order_executor.py  options_trading_bot.py  plugin_tools_menu.py  (+23 more)
ArchAssistantFiles/: ArchUx_01_Summary.md  ArchUx_02_RefactorCLI.md  DASHBOARD_MOCK.md
CODEX/: CODEX_CHECKLIST.md  CODEX_CHECKLIST_V1.0.md  CODEX_CHECKLIST_V1.2.md
DeepResearch/: Bot-PortfolioManager-DeepResearch  README.md
alpaca/: __init__.py  api_client.py  chatgpt_advisor.py  gamma_scalper.py  llm_vetter.py  portfolio_manager.py  risk_manager.py  trade_manager.py  trading_bot.py  watchlist_manager.py  yield_farming.py
alpacca/: chatgpt_advisor.py  llm_vetter.py  portfolio_manager.py  risk_manager.py  trade_manager.py
dashboards/: textual_dashboard.py
docs/: develop_api.md  gamma_scalper_mode.md  multi_metric_analysis.md  portfolio_db.md  textual_dashboard.md  trading_daemon.md
fundrunner/: main.py
info/: active_checklist.md  directory_map.md  module_summary.md  reference_gpt_url.txt
options/: options_integration.py
plugins/: multi_metric_analysis.py  plot_trades.py  portfolio_optimizer.py  sentiment_finbert.py
scripts/: chroma_index.py  chroma_support.py  lint.sh  query_chroma.py  setup.sh
services/: __init__.py  trading_daemon.py
tests/: test_agents_framework.py  test_api_client_positions.py  test_api_client_time_format.py  test_backtester.py  test_chatgpt_trading_controller.py  test_cli_config_menu.py  test_cli_menu.py  test_cli_yield_farming.py  test_config_portfolio_mode.py  test_dashboard.py  test_gamma_scalper.py  test_gpt_client_json.py  test_lending_rates.py  test_lending_rates_service.py  test_metrics_format.py  test_news_service.py  test_notifications.py  test_plugins.py  (+15 more)
(+93 files in other folders)
