[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundrunner"
version = "0.1.0"
description = "Comprehensive algorithmic trading application with Alpaca Markets integration"
authors = [{name = "FundRunner Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "alpaca-trade-api>=3.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0", 
    "rich>=13.0.0",
    "textual>=0.40.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "flask>=2.3.0",
]

[project.optional-dependencies]
plugins = [
    "transformers>=4.20.0",
    "torch>=2.0.0",
    "tiktoken>=0.4.0", 
    "openai>=1.0.0",
    "PyPortfolioOpt>=1.5.0",
    "mplfinance>=0.12.0",
]
dev = [
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
fundrunner = "fundrunner.main:main"
fundrunner-daemon = "fundrunner.services.trading_daemon:main"

[project.urls]
Homepage = "https://github.com/braydio/FundRunner"
Repository = "https://github.com/braydio/FundRunner"
Documentation = "https://github.com/braydio/FundRunner/tree/main/docs"
Issues = "https://github.com/braydio/FundRunner/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]  
select = ["E9", "F63", "F7"]
per-file-ignores = [
    "__init__.py:F401"
]
exclude = [
    ".git",
    "__pycache__",
    "build", 
    "dist",
    ".venv"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--cov=fundrunner",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]
asyncio_mode = "auto"
